@@ -13,6 +13,8 @@ import com.dotcms.api.system.event.Visibility;
 import com.dotcms.api.system.event.VisibilityRoles;
 import com.dotcms.api.system.event.verifier.ExcludeOwnerVerifierBean;
 import com.dotcms.api.tree.Parentable;
+import com.dotcms.rest.api.v1.folder.FolderSearchView;
+import com.dotmarketing.util.PaginatedArrayList;
 import com.dotcms.business.CloseDBIfOpened;
 import com.dotcms.business.WrapInTransaction;
 import com.dotcms.content.elasticsearch.business.event.ContentletArchiveEvent;
@@ -804,6 +806,47 @@ public class FolderAPIImpl implements FolderAPI  {
 		return folderFactory.findFoldersByHost(host);
 	}
 
+	@Override
+	@CloseDBIfOpened
+	public PaginatedArrayList<FolderSearchView> searchFolders(final FolderSearchParams params)
+			throws DotDataException, DotSecurityException {
+
+		// 1. Load all matching folders (no LIMIT — pagination happens in Java so that
+		//    permission filtering does not produce short pages for limited users).
+		final var all = folderFactory.searchFolders(params);
+
+		// 2. Batch READ filter — one SQL round-trip for the entire collection.
+		final var filtered = permissionAPI.filterCollection(
+				all, PermissionAPI.PERMISSION_READ, params.user(), params.respectFrontendRoles());
+
+		// 3. Java pagination — applied after permission filtering for correctness.
+		final int total = filtered.size();
+		final int from  = Math.min(params.offset(), total);
+		final int to    = params.limit() < 0 ? total : Math.min(params.offset() + params.limit(), total);
+		final var page  = filtered.subList(from, to);
+
+		// 4. Batch CAN_ADD_CHILDREN check — only on the page (≤ perPage items).
+		final Set<String> canAddIds = permissionAPI.filterCollection(
+				page, PermissionAPI.PERMISSION_CAN_ADD_CHILDREN, params.user(), params.respectFrontendRoles())
+				.stream().map(Permissionable::getPermissionId).collect(Collectors.toSet());
+
+		// 5. Map to views.
+		final var views = page.stream()
+				.map(folder -> {
+					final var fullPath   = folder.getPath();
+					final var parentPath = fullPath.substring(0, fullPath.length() - folder.getName().length() - 1);
+					return new FolderSearchView(
+							folder.getIdentifier(), folder.getInode(), folder.getName(),
+							parentPath, canAddIds.contains(folder.getPermissionId()));
+				})
+				.toList();
+
+		final var result = new PaginatedArrayList<FolderSearchView>();
+		result.setTotalResults(total);
+		result.addAll(views);
+		return result;
+	}
+
 	@CloseDBIfOpened
 	public  List<Link> getLinks(final Folder parent, final boolean working,
 								final boolean deleted, final User user,
@@ -1313,15 +1356,17 @@ public class FolderAPIImpl implements FolderAPI  {
 
 			try {
 
-				final String name = contentlet instanceof  IFileAsset?
-						IFileAsset.class.cast(contentlet).getFileName(): (String)contentlet.getMap().get("fileName");
+				final String name = contentlet instanceof IFileAsset ifa
+						? ifa.getFileName()
+						: (String) contentlet.getMap().get("fileName");
 
 				if (null != childNameFilter && !childNameFilter.test(name)) {
 					return;
 				}
 
-				final String fileAssetFolderParentId = contentlet instanceof  IFileAsset?
-						IFileAsset.class.cast(contentlet).getParent(): (String)contentlet.getMap().get(Contentlet.FOLDER_KEY);
+				final String fileAssetFolderParentId = contentlet instanceof IFileAsset ifa
+						? ifa.getParent()
+						: (String) contentlet.getMap().get(Contentlet.FOLDER_KEY);
 
 				final Folder childFolder = this.find(fileAssetFolderParentId, APILocator.systemUser(), false);
 				if (null != childFolder && this.isChildFolder(childFolder, parentFolder)) {
@@ -1383,7 +1428,7 @@ public class FolderAPIImpl implements FolderAPI  {
 			map.put("entries", entry.get("total"));
 			return map;
 
-		}).collect(Collectors.toList());
+		}).toList();
 	}
 
 	@CloseDBIfOpened
